cocos2d-x-3.1-alpha0 May.1 2014
     [NEW]          Android: Adds support for get response when Activity's onActivityResult is triggered
     [NEW]          Core: Adds RefPtr<T> smart pointer support
     [NEW]          Label: supports auto-culling
     [NEW]          Math: New unified math library that supercedes Kazmath, CCGeometry and CCAffine*
     [NEW]          Test: Adds a sample for making a outline sprite by using a custom shader

     [FIX]          Application: Application::run returns wrong value on Mac platform
     [FIX]          Build scripts: Improved cmake files for Linux, and Android.mk for Android
     [FIX]          Image: saveToImage may cause memory leak
     [FIX]          Lua: cc.pGetAngle may return wrong value
     [FIX]          Network: HttpRequest uses std::function as callback
     [FIX]          Particle: The effect of particle loaded from CocosBuilder is incorrectly
     [FIX]          ParticleSystem: particle direction in verticality is opposite when "configName" has value and "yCoordFlipped" is -1
     [FIX]          Physics: PhysicsSprite's transform couldn't be updated
     [FIX]          Value: default value changed to false
     [FIX]          WP8: Some bug fixes

cocos2d-x-3.0 Apr.23 2014
     [NEW]          Lua: add `RichText` test cases
     [NEW]          EditBox: Added missing Text Font and Placeholder feature for Mac platform
     
     [FIX]          cocos console: Zipalign the apk generated with release mode
     [FIX]          Director: Application crashes on closing if CC_ENABLE_CACHE_TEXTURE_DATA is enabled
     [FIX]          Image: memoery leak
     [FIX]          Image: crashes when save a jpg file
     [FIX]          Lua: 'EditBox' can't response 'changed','ended' and 'return' event on Windows
     [FIX]          Lua: new project will crash on iOS 5.1 devices
     [FIX]          Others: compiling error when CC_LABELBMFONT_DEBUG_DRAW or CC_LABELATLAS_DEBUG_DRAW is enabled
     