@@ -48,42 +48,6 @@ THE SOFTWARE.
 
 NS_CC_BEGIN
 
-//implementation ParticleSystemQuad
-// overriding the init method
-bool ParticleSystemQuad::initWithTotalParticles(int numberOfParticles)
-{
-    // base initialization
-    if( ParticleSystem::initWithTotalParticles(numberOfParticles) ) 
-    {
-        // allocating data space
-        if( ! this->allocMemory() ) {
-            this->release();
-            return false;
-        }
-
-        initIndices();
-        if (Configuration::getInstance()->supportsShareableVAO())
-        {
-            setupVBOandVAO();
-        }
-        else
-        {
-            setupVBO();
-        }
-
-        setShaderProgram(ShaderCache::getInstance()->getProgram(GLProgram::SHADER_NAME_POSITION_TEXTURE_COLOR_NO_MVP));
-        
-#if CC_ENABLE_CACHE_TEXTURE_DATA
-        // Need to listen the event only when not use batchnode, because it will use VBO
-        auto listener = EventListenerCustom::create(EVENT_COME_TO_FOREGROUND, CC_CALLBACK_1(ParticleSystemQuad::listenBackToForeground, this));
-        _eventDispatcher->addEventListenerWithSceneGraphPriority(listener, this);
-#endif
-
-        return true;
-    }
-    return false;
-}
-
 ParticleSystemQuad::ParticleSystemQuad()
 :_quads(nullptr)
 ,_indices(nullptr)
@@ -132,6 +96,53 @@ ParticleSystemQuad * ParticleSystemQuad::createWithTotalParticles(int numberOfPa
     return ret;
 }
 
+ParticleSystemQuad * ParticleSystemQuad::create(ValueMap &dictionary)
+{
+    ParticleSystemQuad *ret = new (std::nothrow) ParticleSystemQuad();
+    if (ret && ret->initWithDictionary(dictionary))
+    {
+        ret->autorelease();
+        return ret;
+    }
+    CC_SAFE_DELETE(ret);
+    return ret;
+}
+
+//implementation ParticleSystemQuad
+// overriding the init method
+bool ParticleSystemQuad::initWithTotalParticles(int numberOfParticles)
+{
+    // base initialization
+    if( ParticleSystem::initWithTotalParticles(numberOfParticles) )
+    {
+        // allocating data space
+        if( ! this->allocMemory() ) {
+            this->release();
+            return false;
+        }
+
+        initIndices();
+        if (Configuration::getInstance()->supportsShareableVAO())
+        {
+            setupVBOandVAO();
+        }
+        else
+        {
+            setupVBO();
+        }
+
+        setShaderProgram(ShaderCache::getInstance()->getProgram(GLProgram::SHADER_NAME_POSITION_TEXTURE_COLOR_NO_MVP));
+
+#if CC_ENABLE_CACHE_TEXTURE_DATA
+        // Need to listen the event only when not use batchnode, because it will use VBO
+        auto listener = EventListenerCustom::create(EVENT_COME_TO_FOREGROUND, CC_CALLBACK_1(ParticleSystemQuad::listenBackToForeground, this));
+        _eventDispatcher->addEventListenerWithSceneGraphPriority(listener, this);
+#endif
+
+        return true;
+    }
+    return false;
+}
 
 // pointRect should be in Texture coordinates, not pixel coordinates
 void ParticleSystemQuad::initTexCoordsWithRect(const Rect& pointRect)
