@@ -1,3 +1,6 @@
+cocos2d-x-3.1-alpha1 May.8 2014
+    [FIX]           ParticleSystem: Particles can be created without a texture
+
 cocos2d-x-3.1-alpha0 May.1 2014
      [NEW]          Android: Adds support for get response when Activity's onActivityResult is triggered
      [NEW]          Core: Adds RefPtr<T> smart pointer support
